fixed contrast home

--- a/real_deal-css.css
+++ b/real_deal-css.css
@@ -112,6 +112,10 @@ div.space_bar {
 #content_home {
     display: grid;
     grid-template-columns: 1fr;
+    text-align: center;
+    justify-items: center;
+    align-items: center;
+
 }
 img.home_house {
     grid-row: 1/3;
@@ -124,18 +128,24 @@ h1.home_contact {
     grid-row: 1/2;
     grid-column: -1/1;
     z-index: 1;
+    padding: 10px 15px;
+    border-radius: 15px;
+    background-color: #565656;
     color: white;
     align-self: center;
     text-shadow: 
-    -3px -3px 0 black, /* Top-left */
-    3px -3px 0 black,  /* Top-right */
-    -3px 3px 0 black,  /* Bottom-left */
-    3px 3px 0 black;   /* Bottom-right */
+    -1px -1px 0 black, /* Top-left */
+    1px -1px 0 black,  /* Top-right */
+    -1px 1px 0 black,  /* Bottom-left */
+    1px 1px 0 black;   /* Bottom-right */
 }
 h2.home_deal {
     grid-row: 2/3;
     grid-column: -1/1;
     z-index: 1;
+    padding: 10px 15px;
+    border-radius: 15px;
+    background-color: #565656;
     color: black;
     align-self: center;
     text-align: center;
